--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,11 +60,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Destroy.cs" />
     <Compile Include="Assets\Scripts\AnimationCycling.cs" />
     <Compile Include="Assets\Scripts\BlackHole.cs" />
     <Compile Include="Assets\Scripts\Collectibles.cs" />
     <Compile Include="Assets\Scripts\CollectiblesSpawner.cs" />
+    <Compile Include="Assets\Scripts\Destroy.cs" />
     <Compile Include="Assets\Scripts\Explode.cs" />
     <Compile Include="Assets\Scripts\FollowMouse.cs" />
     <Compile Include="Assets\Scripts\IdleBehavior.cs" />
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Scripts\MoveTowardsCenter.cs" />
     <Compile Include="Assets\Scripts\PathVariables.cs" />
     <Compile Include="Assets\Scripts\ProcedureVariables.cs" />
+    <Compile Include="Assets\Scripts\SceneLoader.cs" />
     <Compile Include="Assets\Scripts\ScoreKeeper.cs" />
     <Compile Include="Assets\unity-chan!\Unity-chan! Model\Scripts\AutoBlink.cs" />
     <Compile Include="Assets\unity-chan!\Unity-chan! Model\Scripts\CameraController.cs" />
